# 2023-autumn-ab-java-hw-13-art3xa

./: .bandit  .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/app/: main.py
src/app/core/app/: app.py  convertors.py  exceptions.py  headers.py  json_response.py  query_params.py  request.py  response.py  route.py  router.py  types.py
src/app/internal/auth/: dto.py  hash.py  repository.py  service.py
src/app/internal/auth/middlewares/: auth.py  service.py  utils.py
src/app/internal/auth/transport/: di.py  handlers.py
src/app/internal/tasks/: dto.py  repository.py  service.py
src/app/internal/tasks/transport/: di.py  handlers.py
src/app/internal/users/: dto.py  repository.py  service.py
src/app/internal/users/transport/: di.py  handlers.py
src/config/: settings.py
src/db/: di.py  models.py
tests/: test_app.py  test_convertors.py  test_exceptions.py  test_headers.py  test_json_response.py  test_parse_path.py  test_query_params.py  test_request.py  test_response.py  test_route.py  test_router.py
